--- a/Final actuel/HTML/Estimate.html
+++ b/Final actuel/HTML/Estimate.html
@@ -255,10 +255,10 @@
                         <div class="col-lg-3 col-xs-12 links">
                             <h4 class="mt-lg-0 mt-sm-3">Links</h4>
                             <ul class="m-0 p-0">
-                                <li>- <a href="#">Lorem ipsum</a></li>
-                                <li>- <a href="#">Nam mauris velit</a></li>
-                                <li>- <a href="#">Etiam vitae mauris</a></li>
-                                <li>- <a href="#">Fusce scelerisque</a></li>
+                                <li>- <a href="Contact.html">Contact</a></li>
+                                <li>- <a href="report.html">Report a problem</a></li>
+                                <li>- <a href="commentaire.html">Commentaires</a></li>
+                                <li>- <a href="Login.html">Login</a></li>
                                 <li>- <a href="#">Sed faucibus</a></li>
                                 <li>- <a href="#">Mauris efficitur nulla</a></li>
                             </ul>
@@ -277,6 +277,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </body>
     <script src="../JS/estimate.js" type="text/javascript"></script>
