--- a/Final actuel/HTML/index.html
+++ b/Final actuel/HTML/index.html
@@ -75,10 +75,10 @@ and open the template in the editor.
                         <div class="col-lg-3 col-xs-12 links">
                             <h4 class="mt-lg-0 mt-sm-3">Links</h4>
                             <ul class="m-0 p-0">
-                                <li>- <a href="#">Lorem ipsum</a></li>
-                                <li>- <a href="#">Nam mauris velit</a></li>
-                                <li>- <a href="#">Etiam vitae mauris</a></li>
-                                <li>- <a href="#">Fusce scelerisque</a></li>
+                                <li>- <a href="Contact.html">Contact</a></li>
+                                <li>- <a href="report.html">Report a problem</a></li>
+                                <li>- <a href="commentaire.html">Commentaires</a></li>
+                                <li>- <a href="Login.html">Login</a></li>
                                 <li>- <a href="#">Sed faucibus</a></li>
                                 <li>- <a href="#">Mauris efficitur nulla</a></li>
                             </ul>
@@ -97,6 +97,7 @@ and open the template in the editor.
                     </div>
                 </div>
             </div>
+        </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
