--- a/Final actuel/HTML/project.html
+++ b/Final actuel/HTML/project.html
@@ -207,10 +207,10 @@
                         <div class="col-lg-3 col-xs-12 links">
                             <h4 class="mt-lg-0 mt-sm-3">Links</h4>
                             <ul class="m-0 p-0">
-                                <li>- <a href="#">Lorem ipsum</a></li>
-                                <li>- <a href="#">Nam mauris velit</a></li>
-                                <li>- <a href="#">Etiam vitae mauris</a></li>
-                                <li>- <a href="#">Fusce scelerisque</a></li>
+                                <li>- <a href="Contact.html">Contact</a></li>
+                                <li>- <a href="report.html">Report a problem</a></li>
+                                <li>- <a href="commentaire.html">Commentaires</a></li>
+                                <li>- <a href="Login.html">Login</a></li>
                                 <li>- <a href="#">Sed faucibus</a></li>
                                 <li>- <a href="#">Mauris efficitur nulla</a></li>
                             </ul>
@@ -229,6 +229,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
