--- a/Final actuel/HTML/Contact.html
+++ b/Final actuel/HTML/Contact.html
@@ -105,7 +105,40 @@ and open the template in the editor.
         </div>
 
 
-
+<div class="mt-5 pt-5 pb-5 footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-5 col-xs-12 about-company">
+                            <h2 class="footerTitle2">Heading</h2>
+                            <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
+                            <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
+                        </div>
+                        <div class="col-lg-3 col-xs-12 links">
+                            <h4 class="mt-lg-0 mt-sm-3">Links</h4>
+                            <ul class="m-0 p-0">
+                                <li>- <a href="Contact.html">Contact</a></li>
+                                <li>- <a href="report.html">Report a problem</a></li>
+                                <li>- <a href="commentaire.html">Commentaires</a></li>
+                                <li>- <a href="Login.html">Login</a></li>
+                                <li>- <a href="#">Sed faucibus</a></li>
+                                <li>- <a href="#">Mauris efficitur nulla</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4 col-xs-12 location">
+                            <h4 class="mt-lg-0 mt-sm-4">Location</h4>
+                            <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
+                            <p class="mb-0"><i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
+                            <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col copyright">
+                            <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
