--- a/Final actuel/HTML/Contact.html
+++ b/Final actuel/HTML/Contact.html
@@ -161,5 +161,6 @@ and open the template in the editor.
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="../JS/jscontact.js" type="text/javascript"></script>
+        <script src="../JS/JSNavBar.js" type="text/javascript"></script>
     </body>
 </html>
