--- a/Final actuel/HTML/Estimate.html
+++ b/Final actuel/HTML/Estimate.html
@@ -231,7 +231,7 @@
                 </div>
             </div>
             <br>
-<div id="popup1" class="overlay2">
+          <div id="popup1" class="overlay2">
             <section class="resume">
 
                 <div id="resume_title">Le devis</div>
@@ -348,7 +348,7 @@
         </div>
     </body>
     <script src="../JS/estimate.js" type="text/javascript"></script>
-    <script src="../Admin/JS/ApercuEstimate.js" type="text/javascript"></script>
+  <!--  <script src="../Admin/JS/ApercuEstimate.js" type="text/javascript"></script>-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
