--- a/Final actuel/HTML/Estimate.html
+++ b/Final actuel/HTML/Estimate.html
@@ -259,7 +259,7 @@
         <div class="row">
             <div class="col-md-5"></div>
 
-            <div class="col-md-2 box">
+            <div class="col-md-2 ">
                 <a class="button" id="Valider" href="#popup1" style="vertical-align:middle"><span>Valider </span></a>
             </div>
         </div>
@@ -284,28 +284,28 @@
                         <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image1">
                         <div class="resume_name" id="resume_name1">name</div>
                     </section>
-                    <section class="resume_meuble" id="resume_meuble1">
-                        <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image1">
-                        <div class="resume_name" id="resume_name1">name</div>
+                    <section class="resume_meuble" id="resume_meuble2">
+                        <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image2">
+                        <div class="resume_name" id="resume_name2">name</div>
                     </section>
-                    <section class="resume_meuble" id="resume_meuble1">
-                        <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image1">
-                        <div class="resume_name" id="resume_name1">name</div>
+                    <section class="resume_meuble" id="resume_meuble3">
+                        <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image3">
+                        <div class="resume_name" id="resume_name3">name</div>
                     </section>
 
                     <!-- </section>
                 <section class="lesMeubles">-->
-                    <section class="resume_meuble" id="resume_meuble1">
-                        <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image1">
-                        <div class="resume_name" id="resume_name1">name</div>
+                    <section class="resume_meuble" id="resume_meuble4">
+                        <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image4">
+                        <div class="resume_name" id="resume_name4">name</div>
                     </section>
-                    <section class="resume_meuble" id="resume_meuble1">
-                        <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image1">
-                        <div class="resume_name" id="resume_name1">name</div>
+                    <section class="resume_meuble" id="resume_meuble5">
+                        <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image5">
+                        <div class="resume_name" id="resume_name5">name</div>
                     </section>
-                    <section class="resume_meuble" id="resume_meuble1">
-                        <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image1">
-                        <div class="resume_name" id="resume_name1">name</div>
+                    <section class="resume_meuble" id="resume_meuble6">
+                        <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image6">
+                        <div class="resume_name" id="resume_name6">name</div>
                     </section>
                 </section>
                 <div id='resume_solChoice'>Sol(s) choisi(s) : </div>
