--- a/Final actuel/HTML/report.html
+++ b/Final actuel/HTML/report.html
@@ -33,7 +33,9 @@ and open the template in the editor.
                 <h6 id="name"></h6>
                 <div><button class="button1" id="login" style="vertical-align:middle"><span>Login</span></button>
                     <button class="button1" id="register" style="vertical-align:middle"><span>register </span></button>
-                    <div><button class="button1" id="logout" style="vertical-align:middle"><span>Logout </span></button>
+                    <div>
+                         <button class="button1" id="Admin" style="vertical-align:middle"><span>Admin </span></button>
+                        <button class="button1" id="logout" style="vertical-align:middle"><span>Logout </span></button>
                     </div>
                     <a class="navbar-links page" href="project.html"> Project</a> <br>
                     <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
